syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/sweetloveinyourheart/exploding-kittens/proto/code/clientserver/go;grpc";

package com.sweetloveinyourheart.kittens.clients;

service ClientServer {
    rpc CreateNewGuestUser(CreateNewGuestUserRequest) returns (CreateNewGuestUserResponse);
    rpc GuestLogin(GuestLoginRequest) returns (GuestLoginResponse);
    rpc GetPlayerProfile(google.protobuf.Empty) returns (PlayerProfileResponse);
    
    rpc CreateLobby(CreateLobbyRequest) returns (CreateLobbyResponse);
    rpc StreamLobby(GetLobbyRequest) returns (stream GetLobbyReply);
    rpc JoinLobby(JoinLobbyRequest) returns (JoinLobbyResponse);
    rpc LeaveLobby(LeaveLobbyRequest) returns (LeaveLobbyResponse);
}

// ========= User ==========

message User {
    string user_id = 1;
    string username = 2;
    string full_name = 3;
    int32 status = 4;
}

// Message for creating a new guest user
message CreateNewGuestUserRequest {
    string username = 1; // Required: Username of the guest user
    string full_name = 2; // Required: Full name of the guest user
}
  
message CreateNewGuestUserResponse {
    User user = 1; // The user basic info
}
  
// Message for guest login
message GuestLoginRequest {
    string user_id = 1; // Required: UUID of the guest user
}
  
message GuestLoginResponse {
    string user_id = 1; // The database id for this user (UUID).
    string token = 2; // The session token for this user.
}

// Message for player profile
message PlayerProfileResponse {
    User user = 1;
}

// ========= Lobby ==========

message Lobby {
    string lobby_id = 1;
    string lobby_code = 2;
    string lobby_name = 3;
    string host_user_id = 4;
    repeated string participants = 5;
}

// Message for create a lobby
message CreateLobbyRequest {
    string lobby_name = 1;
}

message CreateLobbyResponse {
    string lobby_id = 1;
}

message GetLobbyRequest {
    string lobby_id = 1;
}

message GetLobbyReply {
    Lobby lobby = 1;
}

// Message for join a lobby
message JoinLobbyRequest {
    string lobby_code = 1;
}

message JoinLobbyResponse {
    string lobby_id = 1;
}

// Message for leave a lobby
message LeaveLobbyRequest {
    string lobby_id = 1;
}

message LeaveLobbyResponse {
    string lobby_id = 1;
}