syntax = "proto3";

option go_package = "github.com/sweetloveinyourheart/planning-pocker/proto/code/user/go;grpc";

package com.sweetloveinyourheart.pocker.user;

message User {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string status = 4;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

service UserService {
    // Get a user by user_id
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}